[tool.poetry]
name = "kakawa-api"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = "^1.8.2"
llama-index = "^0.10.18"
datasets = "^2.18.0"
ragas = "^0.1.3"
pandas = "^2.2.1"
langfuse = "^2.20.0"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
llama-index-llms-ollama = "^0.1.2"
llama-index-core = "^0.10.18.post1"
qdrant-client = "^1.8.0"
llama-index-vector-stores-qdrant = "^0.1.4"
llama-index-embeddings-openai = "^0.1.6"
llama-index-embeddings-cohere = "^0.1.3"
llama-index-embeddings-fastembed = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
